--- a/src/academiccalendar/ui/main/FXMLDocument.fxml
+++ b/src/academiccalendar/ui/main/FXMLDocument.fxml
@@ -294,7 +294,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="235.0">
                            <children>
-                              <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="304.0" stylesheets="@../style/menuStyle.css">
+                              <VBox fx:id="toolsRootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="304.0" stylesheets="@../style/menuStyle.css">
                                  <children>
                                     <Label alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="304.0" text="Rule Options:">
                                        <font>
