--- a/src/academiccalendar/ui/editevent/edit_event.fxml
+++ b/src/academiccalendar/ui/editevent/edit_event.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="249.0" prefWidth="340.0" stylesheets="@../style/materialButtonStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="academiccalendar.ui.editevent.EditEventController">
+<AnchorPane fx:id="rootPane" prefHeight="249.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="academiccalendar.ui.editevent.EditEventController">
    <children>
-      <HBox id="header" prefHeight="35.0" prefWidth="345.0" AnchorPane.topAnchor="0.0">
+      <HBox id="header" prefHeight="35.0" prefWidth="345.0" stylesheets="@../style/materialButtonStyle.css" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="topLabel" prefHeight="25.0" prefWidth="313.0" text="Edit Event">
                <font>
@@ -55,7 +55,7 @@
             <HBox prefHeight="100.0" prefWidth="200.0" />
          </children>
       </VBox>
-      <HBox layoutX="5.0" layoutY="181.0" prefHeight="41.0" prefWidth="345.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox layoutX="5.0" layoutY="181.0" prefHeight="41.0" prefWidth="345.0" stylesheets="@../style/materialButtonStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <JFXButton onMouseClicked="#update" prefHeight="40.0" prefWidth="200.0" text="Update">
                <font>
