--- a/src/academiccalendar/ui/listcalendars/list_calendars.fxml
+++ b/src/academiccalendar/ui/listcalendars/list_calendars.fxml
@@ -53,8 +53,8 @@
             <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
               <columns>
                 <TableColumn fx:id="nameCol" prefWidth="163.0" text="Calendar Name" />
-                <TableColumn fx:id="springCol" minWidth="0.0" prefWidth="140.0" text="Spring Semester" />
-                  <TableColumn fx:id="fallCol" minWidth="0.0" prefWidth="140.0" text="Fall Semester" />
+                <TableColumn fx:id="springCol" minWidth="0.0" prefWidth="124.0" text="Fall Semester" />
+                  <TableColumn fx:id="fallCol" minWidth="0.0" prefWidth="156.0" text="Spring Semester" />
               </columns>
                <VBox.margin>
                   <Insets left="10.0" right="10.0" />
