--- a/src/academiccalendar/ui/main/FXMLDocument.fxml
+++ b/src/academiccalendar/ui/main/FXMLDocument.fxml
@@ -383,6 +383,19 @@
                                           <Insets left="20.0" right="20.0" top="10.0" />
                                        </VBox.margin>
                                     </JFXButton>
+                                    <Label alignment="BOTTOM_CENTER" layoutX="10.0" layoutY="158.0" prefHeight="40.0" prefWidth="304.0" text="Event Options:">
+                                       <font>
+                                          <Font size="12.0" />
+                                       </font>
+                                    </Label>
+                                    <JFXButton id="menuButton" layoutX="30.0" layoutY="208.0" onMouseClicked="#deleteAllEvents" prefHeight="44.0" prefWidth="329.0" text="Delete All Events">
+                                       <font>
+                                          <Font size="12.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets left="20.0" right="20.0" top="10.0" />
+                                       </VBox.margin>
+                                    </JFXButton>
                                  </children>
                               </VBox>
                            </children>
