--- a/src/academiccalendar/ui/listterms/list_terms.fxml
+++ b/src/academiccalendar/ui/listterms/list_terms.fxml
@@ -77,15 +77,10 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="31.0" prefWidth="459.0">
                <children>
-                  <JFXButton alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#editTerm" prefHeight="32.0" prefWidth="140.0" stylesheets="@../style/materialButtonStyle.css" text="Edit Term">
+                  <JFXButton alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#editTerm" prefHeight="32.0" prefWidth="140.0" stylesheets="@../style/materialButtonStyle.css" text="Edit Date">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin></JFXButton>
-                  <JFXButton alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#deleteTerm" prefHeight="32.0" prefWidth="140.0" stylesheets="@../style/materialButtonStyle.css" text="Delete Term">
-                     <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </JFXButton>
                </children>
                <VBox.margin>
                   <Insets top="10.0" />
